license dropdown going behind. FIXED

--- a/web-app/css/wgp.css
+++ b/web-app/css/wgp.css
@@ -760,7 +760,7 @@ ul#recoSummary {
 }
 
 .licence_div {
-	z-index: 11;
+	z-index: 50;
 	cursor: pointer;
 }
 
